# nrt-logging

./: .coveragerc  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py  tests_execution.py
.github/workflows/: dependency-review.yml  python-package.yml  python-publish.yml
baseline/config_files/: logging_config_line.yaml  logging_config_line_same_sh_in_multiple_loggers.yaml  logging_config_line_with_limit_file_size.yaml  logging_config_line_with_limit_file_size_and_zip.yaml  logging_config_line_with_limit_file_size_without_archive.yaml  logging_config_line_with_negative_files_amount.yaml  logging_config_multi_logger_inheritance.yaml  logging_config_multi_sh_no_inheritance.yaml  logging_config_yaml.yaml  logging_config_yaml_invalid_log_level.yaml  logging_config_yaml_invalid_log_yaml_elements.yaml  logging_config_yaml_invalid_style.yaml  logging_config_yaml_same_logger.yaml  logging_config_yaml_without_name.yaml  logging_config_yaml_without_stream_handlers.yaml
coverage_report/: coverage.lcov  lcov.info  report.json
examples/: config_logger_1.py  config_logger_2.py  hierarchy_yaml_logging.py  log_snapshot.py  log_snapshot_1.py  log_snapshot_2.py  log_snapshot_3.py  manual_hierarchy_line_logging_1.py  manual_hierarchy_line_logging_2.py  test_hierarchy_logging.py  test_manual_hierarchy_logging.py
examples/config/: config_1.yaml  config_2.yaml
examples/demo_classes/: demo_classes.py
nrt_logging/: __init__.py  config.py  exceptions.py  log_format.py  log_level.py  logger.py  logger_manager.py  logger_stream_handlers.py
(+19 files in other folders)
